# causality-benchmark-data

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.txt  README.md  pyproject.toml
analysis/: compounding.py  evaluate_pnl.py
causality_forecast_darts/analysis/: backtest.py  compounding.py  evaluate_pnl.py
causality_forecast_darts/data/: dataloader.py
causality_forecast_darts/notebook/: 01-Backtesting-Signals.ipynb
causalitydata/analysis/: backtest.py  compounding.py
causalitydata/data/: dataloader.py
causalitydata/notebook/: 01-Backtesting-Signals.ipynb
data/: dataloader.py
notebook/: 01-Backtesting-Signals.ipynb
scripts/: install_ipykernel.py  uninstall_ipykernel.py
