[tool.poetry]
name = "causalitydata"
version = "0.1.0"
description = "Showcasing time series forecasting and machine learning optimization with Darts."
authors = ["Causality Group"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
scikit-learn = "1.0.1"
darts = "0.27.1"
stats = "0.1.2a"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
black = {extras = ["jupyter"], version = "^24.2.0"}
pylint = "^3.0.3"
pre-commit = "^3.6.2"


[tool.poetry.group.jupyter]
optional = true

[tool.poetry.group.jupyter.dependencies]
ipykernel = "6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
install-ipykernel = "scripts.install_ipykernel:install_ipykernel"
uninstall-ipykernel = "scripts.uninstall_ipykernel:uninstall_ipykernel"
